Some more changes

--- a/testNode/views/finallyDone.ejs
+++ b/testNode/views/finallyDone.ejs
@@ -2,11 +2,15 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.2.6/animate.min.css" />
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-  <script>
+<link rel="stylesheet"
+	href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+<link rel="stylesheet"
+	href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.2.6/animate.min.css" />
+<script
+	src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script
+	src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+<script>
    $(document).ready(function(e) {
 	  $('.one').addClass("animated zoomIn");
 	  $('.two').addClass("animated zoomIn");
@@ -85,174 +89,191 @@ $('.realLogo').css('opacity','1');
    });
   </script>
 <style>
-.one > img {
-  
-       transform: rotate(90deg);
-	   transition:transform 2s;
-  
+.one>img {
+	transform: rotate(90deg);
+	transition: transform 2s;
 }
 
-.two > img {
-  
-       transform: rotate(180deg);
-	   transition:transform 2s;
-  
+.two>img {
+	transform: rotate(180deg);
+	transition: transform 2s;
 }
 
-.three > img {
-  
-       transform: rotate(-90deg);
-	   transition:transform 2s;
-  
+.three>img {
+	transform: rotate(-90deg);
+	transition: transform 2s;
 }
 
-.four > img {
-  
-       transform: rotate(0deg);
-     transition:transform 2s;
-  
+.four>img {
+	transform: rotate(0deg);
+	transition: transform 2s;
 }
-.one > img , .two > img  , .three > img  , .four > img{
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    margin: auto;
-}
-.one{
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    margin: auto;
-    z-index: 2;
-}
-.two{
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    margin: auto;
-    z-index: 1;
-}
-.three{
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    margin: auto;
-}
-.four{
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    margin: auto;
-  }
-.five{
-       width: 791px;
-    height: 789px;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    margin: auto;
 
+.one>img, .two>img, .three>img, .four>img {
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	margin: auto;
 }
-.customIcon{
-font-size: 76px;
-        width: 95px;
-    height: 96px;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    margin: auto;
-    text-align: center;
-    line-height: 1.22;
-    border-style: solid;
-    border-radius: 137px;
-    z-index: 3;
-    background-color: dodgerblue;
+
+.one {
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	margin: auto;
+	z-index: 2;
 }
-.myLogo{
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    margin: auto;
+
+.two {
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	margin: auto;
+	z-index: 1;
 }
-.myLogos{
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    margin: auto;
+
+.three {
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	margin: auto;
+}
+
+.four {
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	margin: auto;
+}
+
+.five {
+	width: 791px;
+	height: 789px;
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	margin: auto;
+}
+
+.customIcon {
+	font-size: 76px;
+	width: 95px;
+	height: 96px;
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	margin: auto;
+	text-align: center;
+	line-height: 1.22;
+	border-style: solid;
+	border-radius: 137px;
+	z-index: 3;
+	background-color: dodgerblue;
+}
+
+.myLogo {
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	margin: auto;
+}
+
+.myLogos {
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	margin: auto;
 	margin-left: 72px;
-    margin-top: 110px;
+	margin-top: 110px;
 }
 
-.logos{
-  background-image: url("myLogo1.png");
-    background-position-x: 75px;
-    background-position-y: 112px;
-    background-size: 593px;
-    background-repeat: no-repeat;
+.logos {
+	background-image: url("myLogo1.png");
+	background-position-x: 75px;
+	background-position-y: 112px;
+	background-size: 593px;
+	background-repeat: no-repeat;
 }
-.scaler{
 
+.scaler {
+	
 }
-.myLogosss{
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    margin: auto;
+
+.myLogosss {
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	margin: auto;
 }
-.myLogosss > img{
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    margin: auto;
+
+.myLogosss>img {
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	margin: auto;
 }
-.logoline{
-    z-index: 1;
+
+.logoline {
+	z-index: 1;
 }
-.realLogo{
-opacity:0;
+
+.realLogo {
+	opacity: 0;
 }
-.realLogo > img{
-    left: 0.6%;
+
+.realLogo>img {
+	left: 0.6%;
 }
 </style>
 </head>
 <body>
- 
-<div class="scaler container"> 
-<div class="one"><img src="/images/samp4.png" class="img-responsive" /></div>
-<div class="two"><img src="/images/samp4.png" class="img-responsive" /></div>.
-<div class="three"><img src="/images/samp4.png" class="img-responsive" /></div>
-<div class="four"><img src="/images/samp4.png" class="img-responsive" /></div>
-<span class=" customIcon glyphicon glyphicon-off" aria-hidden="true"></span>
- </div>
- <div class="myLogosss logoline"></div>
 
-<div class="myLogosss realLogo"><img src="/images/myLogo2.png" class="img-responsive"/></div>
- <!-- <div class="five"><img src="samp.png" class="img-responsive" /></div>-->
- 
- 
- 
+	<div class="scaler container">
+		<div class="one">
+			<img src="/images/samp4.png" class="img-responsive" />
+		</div>
+		<div class="two">
+			<img src="/images/samp4.png" class="img-responsive" />
+		</div>
+		.
+		<div class="three">
+			<img src="/images/samp4.png" class="img-responsive" />
+		</div>
+		<div class="four">
+			<img src="/images/samp4.png" class="img-responsive" />
+		</div>
+		<span class=" customIcon glyphicon glyphicon-off" aria-hidden="true"></span>
+	</div>
+	<div class="myLogosss logoline"></div>
+
+	<div class="myLogosss realLogo">
+		<img src="/images/myLogo2.png" class="img-responsive" />
+	</div>
+	<!-- <div class="five"><img src="samp.png" class="img-responsive" /></div>-->
+
+
+
 </body>
 </html>
